--- a/ngclearn/.gitignore
+++ b/ngclearn/.gitignore
@@ -3,3 +3,19 @@ __pycache__/
 *.mp4
 *.npy
 *.agent
+
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+*.egg
