cleaned up examples and doc build

--- a/examples/demo1/gncn_t1/fit.cfg
+++ b/examples/demo1/gncn_t1/fit.cfg
@@ -3,8 +3,8 @@
 ################################################################################
 
 out_dir = gncn_t1/
-train_xfname = data/mnist/trainX.npy
-dev_xfname = data/mnist/validX.npy
+train_xfname = ../data/mnist/trainX.npy
+dev_xfname = ../data/mnist/validX.npy
 
 # training meta-parameters
 num_iter = 100
