--- a/examples/demo1/gncn_t1_sigma/fit.cfg
+++ b/examples/demo1/gncn_t1_sigma/fit.cfg
@@ -1,10 +1,10 @@
 ################################################################################
-# Train GNCN-PDH (GNCN-t2-LSigma-PDH) on the MNIST database
+# Train GNCN-t1 on the MNIST database
 ################################################################################
 
-out_dir = gncn_pdh/
-train_xfname = data/mnist/trainX.npy
-dev_xfname = data/mnist/validX.npy
+out_dir = gncn_t1_sigma/
+train_xfname = ../data/mnist/trainX.npy
+dev_xfname = ../data/mnist/validX.npy
 
 # training meta-parameters
 num_iter = 100
@@ -13,7 +13,7 @@ batch_size = 512
 dev_batch_size = 512
 
 # model meta-parameters
-model_type = GNCN_PDH
+model_type = GNCN_t1_Sigma
 
 seed = 69
 wght_sd = 0.05
@@ -21,11 +21,8 @@ act_fx = relu
 out_fx = sigmoid
 z_dim = 360
 z_top_dim = 360
-n_group = 12 #15 #18
-n_top_group = 18 # 12
-alpha_scale = 0.15
-beta_scale = 0.1
 
 beta = 0.1 # controls latent state update
 K = 50 # controls number of steps in a iterative settling episode
 leak = 0.001 # controls leak variable
+lmbda = 0.01 # controls Laplacian prior
