--- a/examples/demo1/gncn_pdh/analyze.cfg
+++ b/examples/demo1/gncn_pdh/analyze.cfg
@@ -8,18 +8,18 @@ node_name = z3
 cmpt_name = phi(z)
 
 batch_size = 512
-train_xfname = data/mnist/trainX.npy
+train_xfname = ../data/mnist/trainX.npy
 out_dir = gncn_pdh/
 latents_fname = gncn_pdh/z3_0.npy
 
 ################## GMM Prior Settings ##################
 gmm_fname = gncn_pdh/prior0.gmm
-labels_fname = data/mnist/trainY.npy
+labels_fname = ../data/mnist/trainY.npy
 
 ################## log p(x) Settings ##################
 n_trials=1
-dev_xfname = data/mnist/testX.npy
-dev_yfname = data/mnist/testY.npy
+dev_xfname = ../data/mnist/testX.npy
+dev_yfname = ../data/mnist/testY.npy
 results_fname = gncn_pdh/results.txt
 rotNeg90 = False
 batch_size = 256
