--- a/examples/demo1/gncn_t1/analyze.cfg
+++ b/examples/demo1/gncn_t1/analyze.cfg
@@ -1,25 +1,25 @@
 ################################################################################
-# Analyze GNCN-t1-Sigma trained on the MNIST database
+# Analyze GNCN-t1 trained on the MNIST database
 ################################################################################
 
 ################## Latent Extraction Settings ##################
-model_fname = gncn_t1_sigma/model0.ngc
+model_fname = gncn_t1/model0.ngc
 node_name = z3
 cmpt_name = phi(z)
 
 batch_size = 512
-train_xfname = data/mnist/trainX.npy
-out_dir = gncn_t1_sigma/
-latents_fname = gncn_t1_sigma/z3_0.npy
+train_xfname = ../data/mnist/trainX.npy
+out_dir = gncn_t1/
+latents_fname = gncn_t1/z3_0.npy
 
 ################## GMM Prior Settings ##################
-gmm_fname = gncn_t1_sigma/prior0.gmm
-labels_fname = data/mnist/trainY.npy
+gmm_fname = gncn_t1/prior0.gmm
+labels_fname = ../data/mnist/trainY.npy
 
 ################## log p(x) Settings ##################
 n_trials=1
-dev_xfname = data/mnist/testX.npy
-dev_yfname = data/mnist/testY.npy
-results_fname = gncn_t1_sigma/results.txt
+dev_xfname = ../data/mnist/testX.npy
+dev_yfname = ../data/mnist/testY.npy
+results_fname = gncn_t1/results.txt
 rotNeg90 = False
 batch_size = 256
