massive upgrade and update to ngc-learn, v0.2.0 about to released

--- a/examples/demo3/gncn_t1_ffm/fit.cfg
+++ b/examples/demo3/gncn_t1_ffm/fit.cfg
@@ -14,7 +14,7 @@ model_fname = gncn_t1_ffm/model0.ngc
 # training meta-parameters
 num_iter = 100
 eta = 0.001
-batch_size = 256 #128
+batch_size = 256
 dev_batch_size = 512
 
 # model meta-parameters
@@ -25,5 +25,5 @@ out_fx = softmax
 z_dim = 500
 
 beta = 0.1 # controls latent state update
-K = 20 #50 #40 #20 # controls number of steps in a iterative settling episode
+K = 20 # controls number of steps in a iterative settling episode
 leak = 0.0 # controls leak variable
