--- a/examples/demo4/sc_cauchy/fit.cfg
+++ b/examples/demo4/sc_cauchy/fit.cfg
@@ -8,10 +8,9 @@ dev_xfname = ../data/natural_scenes/dataX.npy
 
 # ------------------------------------------------------
 # Overall training meta-parameters
-num_iter = 100 #400
+num_iter = 250
 opt_type = sgd
 eta = 1e-2
-dev_batch_size = 10
 
 # ------------------------------------------------------
 # Model meta-parameters
