--- a/examples/demo5/sc_face/fit.cfg
+++ b/examples/demo5/sc_face/fit.cfg
@@ -1,16 +1,16 @@
 ################################################################################
-# Train GNCN-t1-SC (sparse coding), ISTA variant, on natural images
+# Trains a GNCN-t1-ISTA (deep ISTA) model on face images
 ################################################################################
 
-out_dir = sc_ista/
-train_xfname = ../data/natural_scenes/dataX.npy
-dev_xfname = ../data/natural_scenes/dataX.npy
+out_dir = sc_face/
+train_xfname = ../data/faces/dataX.npy
+dev_xfname = ../data/faces/dataX.npy
 
 # ------------------------------------------------------
 # Overall training meta-parameters
-num_iter = 250
+num_iter = 20
 opt_type = sgd
-eta = 1e-2
+eta = 0.05
 
 # ------------------------------------------------------
 # Model meta-parameters
@@ -23,9 +23,10 @@ thr_lambda = 5e-3
 seed = 69
 act_fx = identity
 out_fx = identity
-z_dim = 100 #192
+z_top_dim = 100
+z_dim = 100
 
 # latent state dynamics
-beta = 0.05 #1e-2 # controls latent state update
-K = 300 #1000 # controls number of steps in a iterative settling episode
-leak = 0 # controls leak variable
+beta = 0.05
+K = 10
+leak = 0
