--- a/examples/demo1/gncn_t1_sigma/analyze.cfg
+++ b/examples/demo1/gncn_t1_sigma/analyze.cfg
@@ -7,7 +7,7 @@ model_fname = gncn_t1_sigma/model0.ngc
 node_name = z3
 cmpt_name = phi(z)
 
-batch_size = 512
+batch_size = 500 #512
 train_xfname = ../data/mnist/trainX.npy
 out_dir = gncn_t1_sigma/
 latents_fname = gncn_t1_sigma/z3_0.npy
@@ -22,4 +22,3 @@ dev_xfname = ../data/mnist/testX.npy
 dev_yfname = ../data/mnist/testY.npy
 results_fname = gncn_t1_sigma/results.txt
 rotNeg90 = False
-batch_size = 256
