minor tweaks/updates

--- a/examples/demo1/gncn_pdh/fit.cfg
+++ b/examples/demo1/gncn_pdh/fit.cfg
@@ -21,8 +21,8 @@ act_fx = relu
 out_fx = sigmoid
 z_dim = 360
 z_top_dim = 360
-n_group = 12 #15 #18
-n_top_group = 18 # 12
+n_group = 12
+n_top_group = 18
 alpha_scale = 0.15
 beta_scale = 0.1
 
