--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-numpy==1.20.0
+numpy>=1.20.0
 tensorflow-gpu>=2.0.0
-scikit-learn==0.24.2
-scipy==1.7.0
+scikit-learn>=0.24.2
+scipy>=1.7.0
 matplotlib>=3.4.3
 networkx>=2.6.3
 pyvis>=0.2.0
