--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,7 +1,7 @@
 sphinx==4.5.0
 sphinx_rtd_theme==0.5.2
 numpy==1.20.0
-tensorflow-gpu>=2.0.0
+tensorflow-gpu==2.9.0
 scikit-learn==0.24.2
 scipy==1.7.0
 myst-parser==0.17.2
