--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -7,8 +7,10 @@ scikit-learn>=0.24.2
 scipy>=1.7.0
 matplotlib>=3.8.0
 
+patchify
+
 --pre
 
 --find-links https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
 
-jax[cuda11]
+jax[cuda11_pip]
