--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,10 @@ numpy>=1.26.0
 scikit-learn>=0.24.2
 scipy>=1.7.0
 matplotlib>=3.8.0
+patchify
 
 --pre
 
 --find-links https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
 
-jax[cuda11]
+jax[cuda11_pip]
