--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,16 +1,9 @@
 sphinx==4.5.0
 sphinx_rtd_theme==0.5.2
 myst-parser==0.17.2
-imageio==2.31.5
 numpy>=1.26.0
 scikit-learn>=0.24.2
 scipy>=1.7.0
 matplotlib>=3.8.0
-
-patchify
-
---pre
-
---find-links https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
-
-jax[cuda11_pip]
+jax>=0.4.18
+imageio==2.31.5
