--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -19,6 +19,13 @@ sphinx:
 # https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
   install:
-  - requirements: docs/requirements.txt
-  - method: setuptools
-    path: .
+    - requirements: docs/requirements.txt
+    - method: pip
+      path: . #docs/
+      # extra_requirements:
+        # - docs
+#python:
+#  install:
+#  - requirements: docs/requirements.txt
+#  - method: setuptools
+#    path: .
