--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,6 +1,6 @@
-sphinx==4.5.0
-sphinx_rtd_theme==0.5.2
-myst-parser==0.17.2
+sphinx>=4.5.0
+sphinx_rtd_theme>=0.5.2
+myst-parser>=0.17.2
 numpy>=1.26.0
 scikit-learn>=0.24.2
 scipy>=1.7.0
