--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-imageio==2.31.5
 numpy>=1.26.0
 scikit-learn>=0.24.2
 scipy>=1.7.0
 matplotlib>=3.8.0
 patchify
 jax>=0.4.18
+jaxlib>=0.4.18
 ngcsimlib>=0.2.b1
+imageio>=2.31.5
