--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,24 +20,23 @@ classifiers=[
   "Intended Audience :: Education",
   "Intended Audience :: Science/Research",
   "Intended Audience :: Developers",
-  "License :: OSI Approved :: BSD-3-Clause License",
+  "License :: OSI Approved :: BSD License",
   "Topic :: Scientific/Engineering",
   "Topic :: Scientific/Engineering :: Mathematics",
-  "Topic :: Scientific/Engineering :: Cognitive Science",
-  "Topic :: Scientific/Engineering :: Computational Neuroscience", 
+  "Topic :: Scientific/Engineering :: Artificial Intelligence",
   "Programming Language :: Python",
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
-  "Operating System :: Linux :: Ubuntu"
+  "Operating System :: Unix"
 ]
 dynamic = ["dependencies"]
 [tool.setuptools.dynamic]
 dependencies = {file = ["requirements.txt"]} ## use classic requirements file
 #dependencies = [
 #  "imageio==2.31.5",
-#  "numpy>=1.26.0", 
-#  "scikit-learn>=0.24.2", 
+#  "numpy>=1.26.0",
+#  "scikit-learn>=0.24.2",
 #  "scipy>=1.7.0",
 #  "matplotlib>=3.8.0",
 #]
