--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ scikit-learn>=0.24.2
 scipy>=1.7.0
 matplotlib>=3.8.0
 patchify
-jax>=0.4.18
-jaxlib>=0.4.18
+jax>=0.5.0
+jaxlib>=0.5.0
 ngcsimlib>=0.3.b4
 imageio>=2.31.5
+pandas>=2.2.3
