--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -5,7 +5,7 @@ numpy>=1.26.0
 scikit-learn>=0.24.2
 scipy>=1.7.0
 matplotlib>=3.8.0
-jax>=0.4.18
-jaxlib>=0.4.18
+jax>=0.4.28
+jaxlib>=0.4.28
 imageio>=2.31.5
-ngcsimlib>=0.3.b4
+ngcsimlib>=1.0.0
