--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "ngclearn"
-version = "2.0.0"
+version = "2.0.1"
 description = "Simulation software for building and analyzing arbitrary predictive coding, spiking network, and biomimetic neural systems."
 authors = [
   {name = "Alexander Ororbia", email = "ago@cs.rit.edu"},
@@ -14,13 +14,13 @@ readme = "README.md"
 keywords = ['python', 'ngc-learn', 'predictive-processing', 'predictive-coding', 'neuro-ai', 
             'jax', 'spiking-neural-networks', 'biomimetics', 'bionics', 'computational-neuroscience']
 requires-python = ">=3.10" #3.8
-license = {text = "BSD-3-Clause License"}
+license = "BSD-3-Clause" # {text = "BSD-3-Clause License"}
 classifiers=[
   "Development Status :: 4 - Beta", #3 - Alpha", # 5 - Production/Stable
   "Intended Audience :: Education",
   "Intended Audience :: Science/Research",
   "Intended Audience :: Developers",
-  "License :: OSI Approved :: BSD License",
+  #"License :: OSI Approved :: BSD License",
   "Topic :: Scientific/Engineering",
   "Topic :: Scientific/Engineering :: Mathematics",
   "Topic :: Scientific/Engineering :: Artificial Intelligence",
