--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -18,9 +18,8 @@ jobs:
       run: |
         # $CONDA is an environment variable pointing to the root of the miniconda directory
         echo $CONDA/bin >> $GITHUB_PATH
-    - name: Pre-install numpy (build dependency)
-      run: |
-        pip install 'numpy>=1.19.5'
+    - name: Pre-install numpy
+      run: conda install numpy=1.26.4 -y
     - name: Install current library and dependencies
       run: |
         pip install --no-build-isolation -e .
