--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -10,29 +10,18 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
-      with:
-        python-version: '3.11'
-    - name: Set up Conda
+    
+    - name: Install Miniconda
       uses: conda-incubator/setup-miniconda@v2
       with:
         auto-update-conda: true
-        python-version: '3.11'
-        environment-name: test-env
-    - name: Pre-install numpy
-      run: conda install numpy=1.26.4 -y
-    - name: Install current library and dependencies
+        miniforge-variant: Mambaforge  # Faster solver
+    
+    - name: Install dependencies
       run: |
-        pip install --no-build-isolation -e .
-    # - name: Lint with flake8
-    #   run: |
-    #     conda install flake8
-    #     # stop the build if there are Python syntax errors or undefined names
-    #     flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-    #     # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-    #     flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
+        conda install -n testenv numpy=1.26 pytest pip
+        conda run -n testenv pip install -e .
+
+    - name: Run tests
       run: |
-        conda install pytest
-        pytest
+        conda run -n testenv pytest
