--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -15,6 +15,8 @@ jobs:
       uses: conda-incubator/setup-miniconda@v2
       with:
         auto-update-conda: true
+        python-version: 3.11
+        environment-name: testenv
     
     - name: Install dependencies
       run: |
