Nudge of release to minor patched version 2.0.3 (#118)
* nudge of doc to 2.0.2 (#115)

Co-authored-by: Alexander Ororbia <ago@hal3.cs.rit.edu>

* minor edit to math in hh-lesson doc

* Fix workflow, numpy install, and pytest bug in github action workflows (#117)

* Update pyproject.toml

* Update python-package-conda.yml

* Update python-package-conda.yml

* Update python-package-conda.yml

* Update python-package-conda.yml

* Update python-package-conda.yml

* Update python-package-conda.yml

* Update python-package-conda.yml

* minor nudge/cleanup to minor patched version 2.0.1

* minor nudge/cleanup to minor patched version 2.0.3

---------

Co-authored-by: Alexander Ororbia <ago@hal3.cs.rit.edu>
Co-authored-by: Viet Dung Nguyen <60036798+rxng8@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,14 @@
 [build-system]
-requires = ["setuptools>=61.0"]
-build-backend = "setuptools.build_meta"
+requires = [
+  "setuptools>=61.0",    # default
+  "wheel",               # also often needed
+  "numpy>=1.19.5"        # add numpy here for build-time use
+]
+build-backend = "setuptools.build_meta" # using setuptool building engine
 
 [project]
 name = "ngclearn"
-version = "2.0.2"
+version = "2.0.3"
 description = "Simulation software for building and analyzing arbitrary predictive coding, spiking network, and biomimetic neural systems."
 authors = [
   {name = "Alexander Ororbia", email = "ago@cs.rit.edu"},
